--- a/css/index.css
+++ b/css/index.css
@@ -27,3 +27,18 @@
     background-color: #6799bc;
     transition: all 0.2s ease-in;
 }
+
+.availability-alert {
+    visibility: hidden;
+    position: fixed;
+    top: 60px;
+    /* width: 50%; */
+    left: 50%;
+    margin-left: -220px;
+    border-radius: 30px;
+    border: none;
+}
+
+.active-availability-alert {
+    visibility: visible;
+}
