--- a/css/index.css
+++ b/css/index.css
@@ -32,9 +32,9 @@
     visibility: hidden;
     position: fixed;
     top: 60px;
-    /* width: 50%; */
-    left: 50%;
-    margin-left: -220px;
+    width: 100%;
+    /* left: 50%; */
+    /* margin-left: -220px; */
     border-radius: 30px;
     border: none;
 }
