Fix footer and buttons

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,13 +1,4 @@
-.table-img {
-    width: 40%;
-}
-
-.empty-cart {
-    color: #CCCCCC;
-    font-size: 30px;
-}
-
-.btn-checkout {
+.btn-continue {
     color: #fff;
     border: none;
     border-radius: 30px;
